Include: add files and structure the page of info teachers

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <img class="hero-image" src="images/landing.svg" alt="Plataforma de estudos">
 
         <div class="buttons-container">
-            <a class="study" href="/study.html"><img src="images/icons/study.svg" alt="Estudar"> Estudar</a>
-            <a class="give-classes" href="/give-classes.html"><img src="images/icons/give-classes.svg" alt="Estudar"> Dar</a>
+            <a class="study" href="study.html"><img src="images/icons/study.svg" alt="Estudar"> Estudar</a>
+            <a class="give-classes" href="give-classes.html"><img src="images/icons/give-classes.svg" alt="Estudar"> Dar</a>
         </div>
-        
+
         <p class="total-connections">
             Total de 200 conexões já realizadas <img src="images/icons/purple-heart.svg" alt="Coração roxo">
         </p>
