--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#8257E5">
+    
     <title>Proffy | Sua plataforma de estudos online</title>
+
+    <link rel="shortcut icon" href="images/favicon.png">
 
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/partials/page-landing.css">
@@ -22,13 +26,13 @@
 
         <div class="buttons-container">
             <a class="study" href="study.html"><img src="images/icons/study.svg" alt="Estudar"> Estudar</a>
-            <a class="give-classes" href="give-classes.html"><img src="images/icons/give-classes.svg" alt="Estudar"> Dar</a>
+            <a class="give-classes" href="give-classes.html"><img src="images/icons/give-classes.svg" alt="Estudar"> Dar Aulas</a>
         </div>
 
         <p class="total-connections">
             Total de 200 conexões já realizadas <img src="images/icons/purple-heart.svg" alt="Coração roxo">
         </p>
     </div>
-
+    
 </body>
-</html>
+</html> 
